k8s/updated/ghost.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ghost
  name: ghost
  namespace: samtalio
spec:
  replicas: 3
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
    spec:
      containers:
      - name: ghost
        image: docker.io/bitnami/ghost:3.12.1-debian-10-r0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits: {}
        livenessProbe:
          failureThreshold: 6
          httpGet:
            httpHeaders:
            - name: Host
              value: vrmeet.io
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 6
          httpGet:
            httpHeaders:
            - name: Host
              value: vrmeet.io
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        ports:
        - containerPort: 2368
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /bitnami/ghost
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gfs-ghost
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ghost
  name: ghost
  namespace: samtalio
spec:
  ports:
  - name: http
    nodePort: 32455
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: ghost
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: host
  name: ghost
  namespace: samtalio
spec:
  rules:
  - host: samtal.io
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: http
        path: /
  - host: vrmeet.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost
          servicePort: http
  tls:
  - hosts:
    - samtal.io
    - vrmeet.io
    secretName: ghost-tls
---
